Refactored ConcurrentFrameExtremeLocator. Improved concept