@@ -15,6 +15,7 @@ import static org.mockito.Mockito.*;
 
 class ConcurrentFrameExtremeLocatorTest {
     private final CandleFactory candleFactory = new CandleFactory("TEST_INSTRUMENT");
+
     @Test
     void locateReturnsEmptyListWhenCandlesIsEmpty() {
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
@@ -27,7 +28,7 @@ class ConcurrentFrameExtremeLocatorTest {
     }
 
     @Test
-    void locatesAllNonOverlappingExtremes() {
+    void locatesOrdinaryExtremes() {
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
 
         List<Candle> frame1 = List.of(
@@ -72,10 +73,12 @@ class ConcurrentFrameExtremeLocatorTest {
         Candle extreme = candles.get(2); // Candle with value 200 and time "2023-01-01T00:02:00Z"
 
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
-        when(baseLocator.locate(anyList())).thenReturn(List.of(extreme));
-        ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(
-            3, baseLocator, 5, 0
-        );
+        when(baseLocator.locate(candles)).thenReturn(List.of(extreme));
+
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(3)
+            .setExtremeVicinity(0)
+            .build();
 
         List<Candle> result = locator.locate(candles);
 
@@ -99,20 +102,103 @@ class ConcurrentFrameExtremeLocatorTest {
         ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(10, baseLocator);
         List<Candle> result = locator.locate(candles);
 
-        assertEquals(0, result.size());
+        assertEquals(0, result.size()); // No full frames to process
         verify(baseLocator, times(0)).locate(anyList());
     }
 
     @Test
-    void locateHandlesSeveralPartsOfFrameCorrectly() {
-        List<Candle> framePart1 = List.of(
+    void locateHandlesNonZeroStartIndexIsOutsideRange() {
+        ExtremeLocator baseLocator = mock(ExtremeLocator.class);
+        CandleFactory candleFactory = new CandleFactory("TEST_INSTRUMENT", 7);
+
+        List<Candle> frame1 = List.of(
+            candleFactory.createCommon("2023-01-01T00:07:00Z", 100),
+            candleFactory.createCommon("2023-01-01T00:08:00Z", 110),
+            candleFactory.createCommon("2023-01-01T00:09:00Z", 100),
+            candleFactory.createCommon("2023-01-01T00:10:00Z", 150),
+            candleFactory.createCommon("2023-01-01T00:11:00Z", 200)
+        );
+        List<Candle> frame2 = List.of(
+            candleFactory.createCommon("2023-01-01T00:12:00Z", 180),
+            candleFactory.createCommon("2023-01-01T00:13:00Z", 170),
+            candleFactory.createCommon("2023-01-01T00:14:00Z", 300),
+            candleFactory.createCommon("2023-01-01T00:15:00Z", 250),
+            candleFactory.createCommon("2023-01-01T00:16:00Z", 280)
+        );
+        List<Candle> candles = ListUtils.merge(frame1, frame2);
+        Candle extreme1 = frame1.get(2); // Candle with value 100 and time "2023-01-01T00:09:00Z"
+        Candle extreme2 = frame2.get(2); // Candle with value 300 and time "2023-01-01T00:14:00Z";
+
+        when(baseLocator.locate(eq(frame1))).thenReturn(List.of(extreme1));
+        when(baseLocator.locate(eq(frame2))).thenReturn(List.of(extreme2));
+
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(5)
+            .setStartIndex(2)
+            .build();
+
+        List<Candle> result = locator.locate(candles);
+
+        assertEquals(2, result.size());
+        assertTrue(result.contains(extreme1));
+        assertTrue(result.contains(extreme2));
+    }
+
+    @Test
+    void locateHandlesNonZeroStartIndexForFullFrames() {
+        ExtremeLocator baseLocator = mock(ExtremeLocator.class);
+
+        List<Candle> beforeFrames = List.of(
+            candleFactory.createCommon("2023-01-01T00:00:00Z", 90),
+            candleFactory.createCommon("2023-01-01T00:01:00Z", 95)
+        );
+        List<Candle> frame1 = List.of(
+            candleFactory.createCommon("2023-01-01T00:02:00Z", 100),
+            candleFactory.createCommon("2023-01-01T00:03:00Z", 110),
+            candleFactory.createCommon("2023-01-01T00:04:00Z", 100),
+            candleFactory.createCommon("2023-01-01T00:05:00Z", 150),
+            candleFactory.createCommon("2023-01-01T00:06:00Z", 200)
+        );
+        List<Candle> frame2 = List.of(
+            candleFactory.createCommon("2023-01-01T00:07:00Z", 180),
+            candleFactory.createCommon("2023-01-01T00:08:00Z", 170),
+            candleFactory.createCommon("2023-01-01T00:09:00Z", 300),
+            candleFactory.createCommon("2023-01-01T00:10:00Z", 250),
+            candleFactory.createCommon("2023-01-01T00:11:00Z", 280)
+        );
+        List<Candle> afterFrames = List.of(
+            candleFactory.createCommon("2023-01-01T00:12:00Z", 260),
+            candleFactory.createCommon("2023-01-01T00:13:00Z", 240),
+            candleFactory.createCommon("2023-01-01T00:14:00Z", 240)
+        );
+        List<Candle> candles = ListUtils.merge(beforeFrames, frame1, frame2, afterFrames);
+        Candle extreme1 = frame1.get(4); // Candle with value 200 and time "2023-01-01T00:04:00Z"
+        Candle extreme2 = frame2.get(2); // Candle with value 300 and time "2023-01-01T00:07:00Z";
+
+        when(baseLocator.locate(eq(frame1))).thenReturn(List.of(extreme1));
+        when(baseLocator.locate(eq(frame2))).thenReturn(List.of(extreme2));
+        when(baseLocator.locate(candles.subList(3, 11))).thenReturn(List.of(extreme1));
+
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(5)
+            .setStartIndex(2)
+            .build();
+
+        List<Candle> result = locator.locate(candles);
+
+        assertEquals(2, result.size());
+        assertTrue(result.contains(extreme1));
+        assertTrue(result.contains(extreme2));
+    }
+
+    @Test
+    void locateHandlesNonZeroStartIndexForPartialFrameCorrectly() {
+        List<Candle> allCandles = List.of(
             candleFactory.createCommon("2023-01-01T00:00:00Z", 100),
             candleFactory.createCommon("2023-01-01T00:01:00Z", 150),
             candleFactory.createCommon("2023-01-01T00:02:00Z", 200),
             candleFactory.createCommon("2023-01-01T00:03:00Z", 150),
-            candleFactory.createCommon("2023-01-01T00:04:00Z", 300)
-        );
-        List<Candle> framePart2 = List.of(
+            candleFactory.createCommon("2023-01-01T00:04:00Z", 300),
             candleFactory.createCommon("2023-01-01T00:05:00Z", 100),
             candleFactory.createCommon("2023-01-01T00:06:00Z", 100),
             candleFactory.createCommon("2023-01-01T00:07:00Z", 150),
@@ -121,19 +207,15 @@ class ConcurrentFrameExtremeLocatorTest {
         );
 
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
-        Candle extreme = framePart1.get(4); // Candle with value 300 and time "2023-01-01T00:04:00Z"
-        when(baseLocator.locate(anyList())).thenReturn(List.of(extreme));
 
-        ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(10, baseLocator);
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(10)
+            .setStartIndex(4)
+            .build();
 
-        List<Candle> result1 = locator.locate(framePart1);
-        assertEquals(0, result1.size());
+        List<Candle> result = locator.locate(allCandles);
+        assertEquals(0, result.size());
         verify(baseLocator, times(0)).locate(anyList());
-
-        List<Candle> result2 = locator.locate(framePart2);
-        assertEquals(1, result2.size());
-        assertEquals(extreme, result2.get(0));
-        verify(baseLocator, times(1)).locate(anyList());
     }
 
     @Test
@@ -149,41 +231,7 @@ class ConcurrentFrameExtremeLocatorTest {
     }
 
     @Test
-    void locatesAllOverlappingExtremes() {
-        ExtremeLocator baseLocator = mock(ExtremeLocator.class);
-
-        List<Candle> frame1 = List.of(
-            candleFactory.createCommon("2023-01-01T00:00:00Z", 100),
-            candleFactory.createCommon("2023-01-01T00:01:00Z", 110),
-            candleFactory.createCommon("2023-01-01T00:02:00Z", 100),
-            candleFactory.createCommon("2023-01-01T00:03:00Z", 150),
-            candleFactory.createCommon("2023-01-01T00:04:00Z", 200)
-        );
-        List<Candle> frame2 = List.of(
-            candleFactory.createCommon("2023-01-01T00:05:00Z", 180),
-            candleFactory.createCommon("2023-01-01T00:06:00Z", 170),
-            candleFactory.createCommon("2023-01-01T00:07:00Z", 300),
-            candleFactory.createCommon("2023-01-01T00:08:00Z", 250),
-            candleFactory.createCommon("2023-01-01T00:09:00Z", 280)
-        );
-        Candle extreme1 = frame1.get(4); // Candle with value 200 and time "2023-01-01T00:04:00Z"
-        Candle extreme2 = frame2.get(2); // Candle with value 300 and time "2023-01-01T00:07:00Z";
-
-        when(baseLocator.locate(eq(frame1))).thenReturn(List.of(extreme1));
-        when(baseLocator.locate(eq(frame2))).thenReturn(List.of(extreme2));
-
-        ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(5, baseLocator);
-
-        List<Candle> candles = ListUtils.merge(frame1, frame2);
-        List<Candle> result = locator.locate(candles);
-
-        assertEquals(2, result.size());
-        assertTrue(result.contains(extreme1));
-        assertTrue(result.contains(extreme2));
-    }
-
-    @Test
-    void locateHandlesEmptyOverlapGracefully() {
+    void locateHandlesZeroVicinityGracefully() {
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
 
         List<Candle> frame = List.of(
@@ -195,9 +243,12 @@ class ConcurrentFrameExtremeLocatorTest {
 
         when(baseLocator.locate(eq(frame))).thenReturn(List.of(extreme));
 
-        ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(
-            3, baseLocator, 2, 0
-        );
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(3)
+            .setThreadCount(2)
+            .setExtremeVicinity(0)
+            .build();
+
         List<Candle> result = locator.locate(frame);
 
         assertEquals(1, result.size());
@@ -207,7 +258,6 @@ class ConcurrentFrameExtremeLocatorTest {
     @Test
     void locateFiltersFalseExtremesCorrectly() {
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
-
 
         List<Candle> frame1 = List.of(
             candleFactory.createCommon("2023-01-01T00:00:00Z", 100),
@@ -226,22 +276,21 @@ class ConcurrentFrameExtremeLocatorTest {
         Candle falseExtreme = frame1.get(4); // Candle with value 260 and time "2023-01-01T00:04:00Z"
         Candle realExtreme = frame2.get(2); // Candle with value 300 and time "2023-01-01T00:07:00Z"
 
-        when(baseLocator.locate(any())).thenReturn(Collections.emptyList());
+        List<Candle> allCandles = ListUtils.merge(frame1, frame2);
+
+        when(baseLocator.locate(allCandles.subList(1, 9))).thenReturn(List.of(realExtreme));
         when(baseLocator.locate(eq(frame1))).thenReturn(List.of(falseExtreme));
         when(baseLocator.locate(eq(frame2))).thenReturn(List.of(realExtreme));
 
         ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(5, baseLocator);
 
-        List<Candle> result1 = locator.locate(frame1);
-        assertEquals(0, result1.size());
-
-        List<Candle> result2 = locator.locate(frame2);
-        assertEquals(1, result2.size());
-        assertEquals(realExtreme, result2.get(0));
+        List<Candle> result = locator.locate(allCandles);
+        assertEquals(1, result.size());
+        assertEquals(realExtreme, result.get(0));
     }
 
     @Test
-    void locateFiltersFalseEdgeExtremesCorrectly() {
+    void locateChoosesEdgeExtremesCorrectly() {
         ExtremeLocator baseLocator = mock(ExtremeLocator.class);
 
         List<Candle> frame1 = List.of(
@@ -258,21 +307,19 @@ class ConcurrentFrameExtremeLocatorTest {
             candleFactory.createCommon("2023-01-01T00:08:00Z", 250),
             candleFactory.createCommon("2023-01-01T00:09:00Z", 280)
         );
+        List<Candle> allCandles = ListUtils.merge(frame1, frame2);
         Candle falseExtreme = frame1.get(4); // Candle with value 260 and time "2023-01-01T00:04:00Z"
         Candle realExtreme = frame2.get(0); // Candle with value 300 and time "2023-01-01T00:05:00Z"
 
-        when(baseLocator.locate(any())).thenReturn(Collections.emptyList());
         when(baseLocator.locate(eq(frame1))).thenReturn(List.of(falseExtreme));
         when(baseLocator.locate(eq(frame2))).thenReturn(List.of(realExtreme));
+        when(baseLocator.locate(allCandles.subList(1, 9))).thenReturn(List.of(realExtreme));
 
         ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(5, baseLocator);
 
-        List<Candle> result1 = locator.locate(frame1);
-        assertEquals(0, result1.size());
-
-        List<Candle> result2 = locator.locate(frame2);
-        assertEquals(1, result2.size());
-        assertEquals(realExtreme, result2.get(0));
+        List<Candle> result = locator.locate(allCandles);
+        assertEquals(1, result.size());
+        assertEquals(realExtreme, result.get(0));
     }
 
     @Test
@@ -293,24 +340,22 @@ class ConcurrentFrameExtremeLocatorTest {
             candleFactory.createCommon("2023-01-01T00:08:00Z", 280),
             candleFactory.createCommon("2023-01-01T00:09:00Z", 260)
         );
+        List<Candle> allCandles = ListUtils.merge(frame1, frame2);
         Candle falseExtreme = frame2.get(4); // Candle with value 260 and time "2023-01-01T00:09:00Z"
         Candle realExtreme = frame1.get(4); // Candle with value 300 and time "2023-01-01T00:04:00Z"
 
-        when(baseLocator.locate(any()))
-            .thenReturn(Collections.emptyList())
-            .thenReturn(List.of(realExtreme))
-            .thenReturn(List.of(falseExtreme));
+        when(baseLocator.locate(eq(frame1))).thenReturn(List.of(realExtreme));
+        when(baseLocator.locate(eq(frame2))).thenReturn(List.of(falseExtreme));
+        when(baseLocator.locate(allCandles.subList(1, 9))).thenReturn(List.of(realExtreme));
 
-        ConcurrentFrameExtremeLocator locator = new ConcurrentFrameExtremeLocator(
-            5, baseLocator, 5, 2
-        );
+        ConcurrentFrameExtremeLocator locator = ConcurrentFrameExtremeLocator.builder(baseLocator)
+            .setFrameSize(5)
+            .setExtremeVicinity(2)
+            .build();
 
-        List<Candle> result1 = locator.locate(frame1);
-        assertEquals(0, result1.size());
-
-        List<Candle> result2 = locator.locate(frame2);
-        assertEquals(1, result2.size());
-        assertEquals(realExtreme, result2.get(0));
+        List<Candle> result = locator.locate(ListUtils.merge(frame1, frame2));
+        assertEquals(1, result.size());
+        assertEquals(realExtreme, result.get(0));
     }
 
     @Test
